fixed the tech images not centered properly.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -189,14 +189,29 @@ textarea {
   transform: translateY(-10px);
 }
 
-#technologies {
+.technologies {
   font-size: larger;
   margin: auto;
 }
 
-#tech-images {
-  display: contents;
-  margin: auto;
+.technologies {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
+  -ms-text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines;
+}
+
+.technologies a {
+  vertical-align: top;
+  display: inline-block;
+}
+
+.stretch {
+  width: 100%;
+  display: inline-block;
+  font-size: 0;
+  line-height: 0;
 }
 
 #project-text {
